--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -260,20 +260,19 @@
   </div>
   
 <!------------------------------------------------------------SIDEBAR -------------------------------->
-<aside style="
-  position: sticky;
-  top: 80px;
-  float: right;
-  width: 220px;
-  margin-left: 30px;
-  padding: 20px 0;
-  background: rgba(40, 40, 40, 0.4);
-  border-radius: 8px;
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255,255,255,0.08);
-  z-index: 10;
-">
+<div class="page-layout" style="display: flex; gap: 30px; padding-top: 80px;">
+  <aside style="
+    position: sticky;
+    top: 80px;
+    width: 220px;
+    flex-shrink: 0;
+    padding: 20px 0;
+    background: rgba(40, 40, 40, 0.4);
+    border-radius: 8px;
+    backdrop-filter: blur(4px);
+    border: 1px solid rgba(255,255,255,0.08);
+    z-index: 10;
+  ">
   <h3 style="
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.3rem;
@@ -317,10 +316,8 @@
   </div>
 </aside>
 
-<!-- Clear float -->
-<div style="clear: both;"></div>
   <!------------------------------------------------PAGE STARTS---------------------------------------------------------------------------------------->
-  <div style="margin-right: 260px;">   <!-- Main content wrapping so it doesn't overlap with sidebar - 220px sidebar width + 40px gap -->
+  <main style="flex: 1;"> <!-- Main content takes remaining space -->
   <h2 style="
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
@@ -466,6 +463,7 @@
   ← Home
   </a>
   </div>
+  </main>
   </div>
 
 </body>
