--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -318,7 +318,7 @@
 </aside>
 <div style="clear: both;"></div>
   <!------------------------------------------------PAGE STARTS---------------------------------------------------------------------------------------->
-  <main style="flex: 1;"> <!-- Main content takes remaining space -->
+  <div style="margin-right: 260px;">
   <h2 style="
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
@@ -464,7 +464,7 @@
   ← Home
   </a>
   </div>
-  </main>
+  </div>
 
 </body>
 </html>
