--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -282,7 +282,7 @@
     margin: 0 0 16px 16px;
     letter-spacing: 0.5px;
   ">
-    Chase season
+    Season
   </h3>
 
   <!-- Years list – text only, no icons -->
@@ -318,7 +318,7 @@
 </aside>
 
   <!------------------------------------------------PAGE STARTS---------------------------------------------------------------------------------------->
-  <div style="margin-right: 260px;">
+  <div style="margin-right: 220px;">
   <h2 style="
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
