--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -262,16 +262,16 @@
 <!------------------------------------------------------------SIDEBAR -------------------------------->
   <aside style="
   position: sticky;
-  top: 80px;
+  top: 180px;
   float: right;
-  width: 120px;
+  width: 110px;
   margin-left: 30px;
   padding: 20px 0;
   background: rgba(49, 49, 49, 0.4);                                           /*#313131*/
   border-radius: 8px;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255,255,255,0.08);
+  /*border: 1px solid rgba(255,255,255,0.08);*/
   z-index: 10;
 ">
   <h3 style="
@@ -318,7 +318,7 @@
 </aside>
 
   <!------------------------------------------------PAGE STARTS---------------------------------------------------------------------------------------->
-  <div style="margin-right: 160px;">
+  <div style="margin-right: 150px;">
   <h2 style="
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.4rem;
