--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -284,7 +284,10 @@
   ">
     Season
   </h3>
-
+  <hr style="
+  border: none;
+  border-top: 1px solid rgba(255, 255, 255, 0.15);  /* light white/grey on dark bg */
+">
   <!-- Years list – text only, no icons -->
   <div style="display: flex; flex-direction: column; gap: 8px; padding: 0 8px;">
     <a href="season-2026.html" class="sidebar-item" title="2026">
