--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -279,7 +279,7 @@
     font-size: 1.3rem;
     font-weight: 800;
     color: white;
-    margin: 0 0 16px 16px;
+    margin: 0 0 12px 12px;
     letter-spacing: 0.5px;
   ">
     Season
@@ -318,6 +318,10 @@
       <span class="text">2018</span>
     </a>
   </div>
+  <hr style="
+  border: none;
+  border-top: 2px solid rgba(255, 255, 255, 0.2);  /* light white/grey on dark bg */
+">
 </aside>
 
   <!------------------------------------------------PAGE STARTS---------------------------------------------------------------------------------------->
