--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -106,6 +106,50 @@
   text-align: center;
   flex: 1;
 }
+/* -----------------------------------------------SIDEBAR SOCIAL STYLE -----------------------------------*/
+.social-item {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 40px;
+  max-width: 40px;
+  height: 36px;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: max-width 0.35s ease, border-radius 0.35s ease, box-shadow 0.35s ease;
+  background: transparent;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+
+.social-item .icon {
+  transition: all 0.3s ease;
+}
+
+.social-item:hover {
+  max-width: 160px;               /* enough for "YouTube", "Instagram", "X" */
+  padding: 4px 12px;
+  background: #1e3a8a;
+  border-radius: 6px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+  transform: scale(1.04);
+}
+
+.social-item:hover .icon {
+  display: none;
+}
+
+.social-item:hover .text {
+  position: static;
+  opacity: 1;
+  visibility: visible;
+  color: white;
+  text-align: center;
+  flex: 1;
+}
   </style>
 </head>
 <body>
@@ -262,7 +306,7 @@
 <!------------------------------------------------------------SIDEBAR -------------------------------->
   <aside style="
   position: sticky;
-  top: 130px;
+  top: 100px;
   float: right;
   width: 110px;
   margin-left: 30px;
@@ -317,6 +361,39 @@
     <a href="season-2018.html" class="sidebar-item" title="2018">
       <span class="text">2018</span>
     </a>
+  <!-- Social icons section -->
+<div style="
+  margin-top: 24px;
+  padding-top: 16px;
+  border-top: 2px solid rgba(255,255,255,0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+">
+  <a href="https://www.youtube.com/@yourchannel" class="sidebar-item social-item" title="YouTube" target="_blank" rel="noopener">
+    <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33 2.78 2.78 0 0 0 1.94 2c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.33 29 29 0 0 0-.46-5.33z"/>
+      <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"/>
+    </svg>
+    <span class="text">YouTube</span>
+  </a>
+
+  <a href="https://www.instagram.com/yourusername" class="sidebar-item social-item" title="Instagram" target="_blank" rel="noopener">
+    <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+      <circle cx="12" cy="12" r="4"/>
+      <circle cx="18" cy="6" r="1"/>
+    </svg>
+    <span class="text">Instagram</span>
+  </a>
+
+  <a href="https://x.com/yourusername" class="sidebar-item social-item" title="X" target="_blank" rel="noopener">
+    <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+    </svg>
+    <span class="text">Twitter/X</span>
+  </a>
+</div>
   </div>
   <hr style="
   border: none;
