--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -130,7 +130,7 @@
 }
 
 .social-item:hover {
-  max-width: 160px;               /* enough for "YouTube", "Instagram", "X" */
+  max-width: 160px;               /* enough for "YouTube", "Instagram" */
   padding: 4px 12px;
   background: #1e3a8a;
   border-radius: 6px;
@@ -306,7 +306,7 @@
 <!------------------------------------------------------------SIDEBAR -------------------------------->
   <aside style="
   position: sticky;
-  top: 60px;
+  top: 70px;
   float: right;
   width: 110px;
   margin-left: 30px;
@@ -387,13 +387,7 @@
     <span class="text">Instagram</span>
   </a>
 
-  <a href="https://x.com/yourusername" class="sidebar-item social-item" title="X" target="_blank" rel="noopener">
-    <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-    </svg>
-    <span class="text">Twitter/X</span>
-  </a>
-</div>
+  </div>
   </div>
   <hr style="
   border: none;
