--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -392,7 +392,7 @@
   flex-direction: column;
   gap: 8px;
 ">
-  <a href="https://www.youtube.com/@yourchannel" class="sidebar-item social-item" title="YouTube" target="_blank" rel="noopener">
+  <a href="https://www.youtube.com/@CroatianStorms" class="sidebar-item social-item" title="YouTube" target="_blank" rel="noopener">
     <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33 2.78 2.78 0 0 0 1.94 2c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.33 29 29 0 0 0-.46-5.33z"/>
       <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"/>
@@ -400,7 +400,7 @@
     <span class="text">YouTube</span>
   </a>
 
-  <a href="https://www.instagram.com/yourusername" class="sidebar-item social-item" title="Instagram" target="_blank" rel="noopener">
+  <a href="https://www.instagram.com/croatian_storms" class="sidebar-item social-item" title="Instagram" target="_blank" rel="noopener">
     <svg class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
       <circle cx="12" cy="12" r="4"/>
