--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -64,6 +64,7 @@
 .menu-item:hover svg {
   display: none;                    /* hide SVG icon on hover */
 }
+
 /* -----------------------------------------------SIDEBAR STYLE -----------------------------------*/
 .sidebar-item {
   position: relative;
@@ -240,17 +241,10 @@
   <polygon points="10 8 16 12 10 16 10 8"/>
 </svg>
   <span class="text">VIDEOS</span>
-</a>
-  <a href="#" class="menu-item" title="Socials">
-  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-  <circle cx="18" cy="5" r="3"/>
-  <circle cx="6" cy="12" r="3"/>
-  <circle cx="18" cy="19" r="3"/>
-  <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"/>
-  <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"/>
-</svg>
-  <span class="text">SOCIALS</span>
-</a>
+<a href="https://www.youtube.com/@CroatianStorms" class="sidebar-item social-item" title="YouTube" target="_blank" rel="noopener">
+    <img class="icon" src="images/youtube.png" alt="YouTube" style="width: 20px; height: 20px;">
+    <span class="text">YOUTUBE</span>
+  </a>
   </nav>
 </header>
 <!--------------------------------------------------------------------- HERO HEADER with background image ------------------------------------->
