--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -130,7 +130,7 @@
   visibility: hidden;
   white-space: nowrap;
   font-weight: 600;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   transition: opacity 0.25s ease 0.1s;
 }
 
@@ -241,10 +241,15 @@
   <polygon points="10 8 16 12 10 16 10 8"/>
 </svg>
   <span class="text">VIDEOS</span>
+</a>
 <a href="https://www.youtube.com/@CroatianStorms" class="sidebar-item social-item" title="YouTube" target="_blank" rel="noopener">
-    <img class="icon" src="images/youtube.png" alt="YouTube" style="width: 20px; height: 20px;">
+    <img class="icon" src="images/youtube.png" alt="YouTube" style="width: 24px; height: 24px;">
     <span class="text">YOUTUBE</span>
   </a>
+<a href="https://www.instagram.com/croatian_storms" class="sidebar-item social-item" title="Instagram" target="_blank" rel="noopener">
+    <img class="icon" src="images/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+    <span class="text">Instagram</span>
+</a>
   </nav>
 </header>
 <!--------------------------------------------------------------------- HERO HEADER with background image ------------------------------------->
