--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -248,7 +248,7 @@
   </a>
 <a href="https://www.instagram.com/croatian_storms" class="sidebar-item social-item" title="Instagram" target="_blank" rel="noopener">
     <img class="icon" src="images/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
-    <span class="text">Instagram</span>
+    <span class="text">INSTAGRAM</span>
 </a>
   </nav>
 </header>
