--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -196,14 +196,13 @@
 ">
   <!-- Left: Custom logo (click → home) -->
   <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
-    <!-- Replace with your logo image when ready -->
-    <!--<img src="images/logo.png" alt="CroatianStorm Logo" style="
-      height: 40px;                 /* adjust size */
+    <img src="images/logo.png" alt="CroatianStorms Logo" style="
+      height: 30px;                 /* adjust size */
       width: auto;
       border-radius: 4px;
       margin-right: 12px;
-    ">-->
-    <!-- Fallback text logo if image not uploaded yet -->
+    ">
+    <!-- Fallback text logo if image not uploaded yet 
     <span style="
       color: white;
       font-weight: bold;
@@ -211,7 +210,7 @@
       letter-spacing: 1px;
       padding-left: 40px;
     ">CroatianStorms</span>
-  </a>
+  </a>-->
 
   <!-- Right: Menu icons + text -->
   <nav style="display: flex; align-items: center; gap: 32px; padding-right: 40px;">
