--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -442,6 +442,7 @@
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   overflow: hidden;
+  background: transparent !important;  /* ← this fixes the black diamonds */
 "></div>
 
   <script>
