--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storm chase 13.07.2023.</title>
+  <title>Lov na oluje 13.07.2023.</title>
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; max-width: 1200px; margin: 0 auto; background-color: #313131; color: #ffffff;}
     h1, h2, h3, h4, p, li, span, em, strong {
@@ -289,7 +289,7 @@
     alt="Date" 
     style="color: white; width: 16px; height: 16px;"
   >
-  <span>13 July 2023</span>
+  <span>13. Srpanj 2023.</span>
   </div>
   
     <!-- Main title with # prefix, bold, large -->
@@ -303,7 +303,7 @@
     line-height: 1.1;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
   ">
-    Supercell near Popovec and Čazma
+    Superćelija kod Popovca i Čazme
   </h1>
 
   <div style="margin: 10px 0 20px;">
@@ -347,7 +347,7 @@
     margin: 0 0 12px 12px;
     letter-spacing: 0.5px;
   ">
-    Season
+    Sezona
   </h3>
   <hr style="
   border: none;
@@ -419,9 +419,9 @@
   margin-bottom: 8px;
   gap: 10px;
   ">
-    Chase map
+    Chase karta
   </h2>
-  <p><em>Zagreb (start of chase) → Komin → reposition back to Popovec → Čazma (end of chase) → back to Zagreb [total: 180 km]</em></p>
+  <p><em>Zagreb (početak chase-a) → Komin → pozicioniranje kod Popovca → Čazma (kraj chase-a) → nazad do Zagreba [Ukupno: 180 km]</em></p>
 
   <!-- Leaflet CSS + JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
