--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CroatianStorm's chase archive</title>
+  <title>CroatianStorm's chase arhiva</title>
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" 
@@ -64,14 +64,14 @@
         location: popovec,  // Popovec location
         tooltip: "Storm chase 13.07.2023. (Popovec)",
         popup: '<div style="text-align:center; min-width:180px;">' +
-                 '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
-                 '<img src="images/zagreb-thumb.jpg" alt="Zagreb preview" ' +
+                 '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
+                 '<img src="images/20230713/zagreb-thumb.jpg" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
-                 '<p style="margin:4px 0; font-size:13px;">Supercell near Popovec and Čazma</p>' +
+                 '<p style="margin:4px 0; font-size:13px;">Superćelija kod Popovca i Čazme</p>' +
                  '<a href="stormchasetest.html" target="_blank" ' +
                     'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                            'text-decoration:none; border-radius:4px; font-weight:bold;">' +
-                    'Read full story →' +
+                    'Pročitajte blog →' +
                  '</a>' +
                '</div>',
         waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Route for this chase
@@ -81,14 +81,14 @@
         location: cazma,  // New marker at Cazma
         tooltip: "Storm chase 13.07.2023. (Čazma)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
-                 '<h4 style="margin:8px 0 4px;">Storm chase 13.07.2023.</h4>' +
+                 '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
                  '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
                       'style="max-width:100%; height:auto; border-radius:4px; margin-bottom:8px;">' +
-                 '<p style="margin:4px 0; font-size:13px;">Supercell near Popovec and Čazma</p>' +
+                 '<p style="margin:4px 0; font-size:13px;">Superćelija kod Popovca i Čazme</p>' +
                  '<a href="stormchasetest.html" target="_blank" ' +
                     'style="display:inline-block; padding:6px 12px; background:#0066cc; color:white; ' +
                            'text-decoration:none; border-radius:4px; font-weight:bold;">' +
-                    'Read full story →' +
+                    'Pročitajte blog →' +
                  '</a>' +
                '</div>',
         waypoints: [zagreb, zagrebistok, komin, popovec, NPivanicgrad, cazma],  // Same route as popovec marker
