--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     var chases = [
       {
         location: popovec,  // Popovec location
-        tooltip: "Storm chase 13.07.2023. (Popovec)",
+        tooltip: "Lov na oluje 13.07.2023. (Popovec)",
         popup: '<div style="text-align:center; min-width:180px;">' +
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
                  '<img src="images/20230713/zagreb-thumb.jpg" alt="Zagreb preview" ' +
@@ -79,7 +79,7 @@
       },
       {
         location: cazma,  // New marker at Cazma
-        tooltip: "Storm chase 13.07.2023. (Čazma)",
+        tooltip: "Lov na oluje 13.07.2023. (Čazma)",
         popup: '<div style="text-align:center; min-width:180px;">' +  // Same popup as requested
                  '<h4 style="margin:8px 0 4px;">Lov na oluje 13.07.2023.</h4>' +
                  '<img src="images/20230713/20230713 - cazma-thumb.jpg" alt="Zagreb preview" ' +
