--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -551,7 +551,7 @@
 
   <h2>Photos</h2>
   <div class="gallery">
-    <img src="images/IMG_22232.jpg" alt="Storm near Zagreb">
+    <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
     <img src="images/hvar-sunset.jpg" alt="Sunset on Hvar">
   </div>
