--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -546,9 +546,21 @@
   <!-- Clear float -->
   <div style="clear: both;"></div>
 
-  <h2>Highlights</h2>
-  <p>We spent amazing days exploring Dalmatia coast. Crystal clear sea, great food, historic towns...</p>
-
+  <h2 style="
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 800;
+  margin-bottom: 8px;
+  gap: 10px;
+  ">
+    Prognoza
+  </h2>
+  <p>Nad srednjom Europom se prema istoku kretala dolina, odnosno prodor u sklopu kojeg je u prizemlju bila vezana hladna fronta. Po visini je ispred prodora bilo prisutno snažno jugozapadno strujanje, 
+    a prolazak fronte se preko naših krajeva očekivao u poslijepodnevnim satima. Modeli su simulirali konvektivnu energiju u vrijednostima od 1500 do 2000 J/kg u kombinaciji s DLS-om od 25 - 30 m/s.
+  ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika)</p>
+  <img src="images/20230713/prognoza.png" alt="Storm near Zagreb"></img>
+    
   <h2>Photos</h2>
   <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
