--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -559,7 +559,7 @@
   <p>Nad srednjom Europom se prema istoku kretala dolina, odnosno prodor u sklopu kojeg je u prizemlju bila vezana hladna fronta. Po visini je ispred prodora bilo prisutno snažno jugozapadno strujanje, 
     a prolazak fronte se preko naših krajeva očekivao u poslijepodnevnim satima. Modeli su simulirali konvektivnu energiju u vrijednostima od 1500 do 2000 J/kg u kombinaciji s DLS-om od 25 - 30 m/s.
   ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika)</p>
-  <img src="images/20230713/prognoza.png" alt="Storm near Zagreb"></img>
+  <img src="images/20230713/forecast.png" alt="ESTOFEX"></img>
     
   <h2>Photos</h2>
   <div class="gallery">
