--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -435,7 +435,7 @@
   <div id="mini-map" style="
   height: 600px;              /* big & impressive */
   width: 100%;
-  margin: 30px 0 40px 0;
+  margin: 20px 0 20px 0;
   border: 2px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
@@ -558,7 +558,7 @@
   </h2>
   <p>Nad srednjom Europom se prema istoku kretala dolina, odnosno prodor u sklopu kojeg je u prizemlju bila vezana hladna fronta. Po visini je ispred prodora bilo prisutno snažno jugozapadno strujanje, 
     a prolazak fronte se preko naših krajeva očekivao u poslijepodnevnim satima. Modeli su simulirali konvektivnu energiju u vrijednostima od 1500 do 2000 J/kg u kombinaciji s DLS-om od 25 - 30 m/s.
-  ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika)</p>
+  ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika).</p>
   <img src="images/20230713/forecast.png" alt="ESTOFEX"></img>
     
   <h2>Photos</h2>
