--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -560,7 +560,16 @@
   ESTOFEX je za unutrašnjost Hrvatske izdao Level 2 i Level 3 (najviši stupanj rizika).</p>
   <img src="images/20230713/forecast.png" alt="ESTOFEX"></img>
     
-  <h2>Photos</h2>
+  <h2 style="
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 800;
+  margin-bottom: 8px;
+  ">
+    Tijek chase-a
+  </h2>
+    
   <div class="gallery">
     <img src="images/20230713/IMG_22232.jpg" alt="Storm near Zagreb">
     <img src="images/dubrovnik-walls.jpg" alt="Dubrovnik city walls">
