--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -88,6 +88,7 @@
 .hamburger {
   font-size: 2rem;
   color: white;
+  margin-right: -8px;
 }
 
 /* Mobile menu style */
@@ -240,6 +241,7 @@
     cursor: pointer;
     color: white;
     font-size: 1.8rem;
+    margin-right: -8px;
   ">☰</label>
 
   <!-- Navigation -->
