--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -88,7 +88,6 @@
 .hamburger {
   font-size: 2rem;
   color: white;
-  margin-right: -8px;
 }
 
 /* Mobile menu style */
@@ -241,7 +240,7 @@
     cursor: pointer;
     color: white;
     font-size: 1.8rem;
-    margin-right: -8px;
+    position: right;
   ">☰</label>
 
   <!-- Navigation -->
