--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -240,7 +240,7 @@
     cursor: pointer;
     color: white;
     font-size: 1.8rem;
-    position: right;
+    margin-right: -40px;
   ">☰</label>
 
   <!-- Navigation -->
