--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -88,7 +88,7 @@
 .hamburger {
   font-size: 2rem;
   color: white;
-  margin-right: -40px;
+  margin-right: -16px;
 }
 
 /* Mobile menu style */
@@ -96,6 +96,9 @@
   background: rgba(40, 40, 40, 0.95);
   backdrop-filter: blur(8px);
 }
+header {
+    padding: 0 12px 0 16px !important;
+  }
 /* -----------------------------------------------SIDEBAR STYLE -----------------------------------*/
 .sidebar-item {
   position: relative;
@@ -235,15 +238,16 @@
     ">
   <!-- Right: Menu icons + text -->
   <!-- Hamburger toggle (visible only on mobile) -->
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" hidden>
-  <label for="menu-toggle" class="hamburger" style="
-    display: none;                /* hidden on desktop */
+<label for="menu-toggle" class="hamburger" style="
+    display: none;
     cursor: pointer;
     color: white;
-    font-size: 1.8rem;
-    margin-right: -40px;
+    font-size: 2rem;
+    padding: 12px 0 12px 16px;    /* touch-friendly padding */
+    margin-right: -12px;           /* pulls it flush to right edge */
+    z-index: 1001;
   ">☰</label>
-
+<input type="checkbox" id="menu-toggle" class="menu-toggle" hidden>
   <!-- Navigation -->
   <nav class="nav-menu" style="
     display: flex;
