--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -70,14 +70,20 @@
 
 /* Mobile: hide horizontal, show hamburger */
 @media (max-width: 768px) {
+  header {
+    padding-right: 0 !important;
+  }
+  
   .hamburger {
     display: block !important;
-    margin-left: auto
+    margin-left: auto;
+    margin-right: 0 !important;
   }
 
   .nav-menu {
     display: none !important;
   }
+
 
   /* Show dropdown when checkbox checked */
   #menu-toggle:checked ~ .mobile-menu {
