--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -80,13 +80,43 @@
     display: none !important;
   }
 
-  #menu-toggle:checked ~ .mobile-menu {
-    display: flex !important;
-  }
-
   header {
     padding-right: 0 !important;       /* no right padding on mobile */
   }
+}
+/* Hide close icon by default */
+.close-icon {
+  opacity: 0;
+}
+
+/* When menu is open (checkbox checked) */
+#menu-toggle:checked ~ label .hamburger-icon {
+  opacity: 0;                     /* hide hamburger lines */
+}
+
+#menu-toggle:checked ~ label .close-icon {
+  opacity: 1;                     /* show X */
+  transform: translate(-50%, -50%) rotate(0deg); /* reset rotation */
+}
+
+/* Animate hamburger lines to X (optional extra smoothness) */
+#menu-toggle:checked ~ label .hamburger-icon:nth-child(1) {
+  transform: translate(-50%, -50%) rotate(45deg);
+  top: 50%;
+}
+
+#menu-toggle:checked ~ label .hamburger-icon:nth-child(2) {
+  opacity: 0;
+}
+
+#menu-toggle:checked ~ label .hamburger-icon:nth-child(3) {
+  transform: translate(-50%, -50%) rotate(-45deg);
+  top: 50%;
+}
+
+/* Mobile menu show/hide (keep your existing) */
+#menu-toggle:checked ~ .mobile-menu {
+  display: flex !important;
 }
 /* -----------------------------------------------SIDEBAR STYLE -----------------------------------*/
 .sidebar-item {
@@ -237,7 +267,74 @@
     margin-left: auto;           /* pushes it to the right */
     margin-right: 12px;         /* removes any right gap */
     padding: 10px 0;
-  ">☰</label>
+  ">
+    <!-- Hamburger lines (visible when closed) -->
+  <span class="hamburger-icon" style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 24px;
+    height: 2px;
+    background: white;
+    border-radius: 2px;
+    transition: all 0.4s ease;
+  "></span>
+  <span class="hamburger-icon" style="
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 24px;
+    height: 2px;
+    background: white;
+    border-radius: 2px;
+    transition: all 0.4s ease;
+  "></span>
+  <span class="hamburger-icon" style="
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 24px;
+    height: 2px;
+    background: white;
+    border-radius: 2px;
+    transition: all 0.4s ease;
+  "></span>
+
+  <!-- X icon (visible when open) -->
+  <span class="close-icon" style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 24px;
+    height: 24px;
+    opacity: 0;
+    transition: all 0.4s ease;
+  ">
+    <span style="
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: white;
+      transform: translateY(-50%);
+    "></span>
+    <span style="
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: white;
+      transform: translateY(-50%) rotate(90deg);
+    "></span>
+  </span>
+</label>
+  
   <!-- Desktop Navigation -->
   <nav class="nav-menu" style="
     display: flex;
