--- a/stormchasetest.html
+++ b/stormchasetest.html
@@ -272,7 +272,9 @@
   ">
     <!-- Hamburger lines (visible when closed) -->
   <span class="hamburger-icon" style="
-    position: absolute;
+    margin-left: auto;           /* pushes it to the right */
+    margin-right: 12px;         /* removes any right gap */
+    padding: 10px 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -283,7 +285,9 @@
     transition: all 0.4s ease;
   "></span>
   <span class="hamburger-icon" style="
-    position: absolute;
+    margin-left: auto;           /* pushes it to the right */
+    margin-right: 12px;         /* removes any right gap */
+    padding: 10px 0;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -294,7 +298,9 @@
     transition: all 0.4s ease;
   "></span>
   <span class="hamburger-icon" style="
-    position: absolute;
+    margin-left: auto;           /* pushes it to the right */
+    margin-right: 12px;         /* removes any right gap */
+    padding: 10px 0;
     top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -307,7 +313,9 @@
 
   <!-- X icon (visible when open) -->
   <span class="close-icon" style="
-    position: absolute;
+    margin-left: auto;           /* pushes it to the right */
+    margin-right: 12px;         /* removes any right gap */
+    padding: 10px 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(45deg);
@@ -317,7 +325,9 @@
     transition: all 0.4s ease;
   ">
     <span style="
-      position: absolute;
+      margin-left: auto;           /* pushes it to the right */
+      margin-right: 12px;         /* removes any right gap */
+      padding: 10px 0;
       top: 50%;
       left: 0;
       width: 100%;
@@ -326,7 +336,9 @@
       transform: translateY(-50%);
     "></span>
     <span style="
-      position: absolute;
+      margin-left: auto;           /* pushes it to the right */
+      margin-right: 12px;         /* removes any right gap */
+      padding: 10px 0;
       top: 50%;
       left: 0;
       width: 100%;
